--- a/extensions/soap/nbproject/project.properties
+++ b/extensions/soap/nbproject/project.properties
@@ -28,10 +28,29 @@ dist.jar=${dist.dir}/soap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.FastInfoset.jar=../../lib/jaxws/FastInfoset.jar
+file.reference.gmbal-api-only.jar=../../lib/jaxws/gmbal-api-only.jar
+file.reference.ha-api.jar=../../lib/jaxws/ha-api.jar
+file.reference.javax.annotation-api.jar=../../lib/jaxws/javax.annotation-api.jar
+file.reference.javax.xml.soap-api.jar=../../lib/jaxws/javax.xml.soap-api.jar
 file.reference.jaxb-api.jar=../../lib/jaxb/jaxb-api.jar
+file.reference.jaxb-api.jar-1=../../lib/jaxws/jaxb-api.jar
 file.reference.jaxb-core.jar=../../lib/jaxb/jaxb-core.jar
+file.reference.jaxb-core.jar-1=../../lib/jaxws/jaxb-core.jar
 file.reference.jaxb-impl.jar=../../lib/jaxb/jaxb-impl.jar
+file.reference.jaxb-impl.jar-1=../../lib/jaxws/jaxb-impl.jar
+file.reference.jaxws-api.jar=../../lib/jaxws/jaxws-api.jar
+file.reference.jaxws-rt.jar=../../lib/jaxws/jaxws-rt.jar
+file.reference.jsr181-api.jar=../../lib/jaxws/jsr181-api.jar
+file.reference.management-api.jar=../../lib/jaxws/management-api.jar
+file.reference.mimepull.jar=../../lib/jaxws/mimepull.jar
+file.reference.policy.jar=../../lib/jaxws/policy.jar
+file.reference.saaj-impl.jar=../../lib/jaxws/saaj-impl.jar
 file.reference.soap-src=src
+file.reference.stax-ex.jar=../../lib/jaxws/stax-ex.jar
+file.reference.stax2-api.jar=../../lib/jaxws/stax2-api.jar
+file.reference.streambuffer.jar=../../lib/jaxws/streambuffer.jar
+file.reference.woodstox-core-asl.jar=../../lib/jaxws/woodstox-core-asl.jar
 file.reference.wsdl4j.jar=../../lib/wsdl4j/wsdl4j.jar
 includes=**
 jar.compress=false
@@ -43,7 +62,26 @@ javac.classpath=\
     ${file.reference.wsdl4j.jar}:\
     ${file.reference.jaxb-api.jar}:\
     ${file.reference.jaxb-core.jar}:\
-    ${file.reference.jaxb-impl.jar}
+    ${file.reference.jaxb-impl.jar}:\
+    ${file.reference.FastInfoset.jar}:\
+    ${file.reference.gmbal-api-only.jar}:\
+    ${file.reference.ha-api.jar}:\
+    ${file.reference.javax.annotation-api.jar}:\
+    ${file.reference.javax.xml.soap-api.jar}:\
+    ${file.reference.jaxb-api.jar-1}:\
+    ${file.reference.jaxb-core.jar-1}:\
+    ${file.reference.jaxb-impl.jar-1}:\
+    ${file.reference.jaxws-api.jar}:\
+    ${file.reference.jaxws-rt.jar}:\
+    ${file.reference.jsr181-api.jar}:\
+    ${file.reference.management-api.jar}:\
+    ${file.reference.mimepull.jar}:\
+    ${file.reference.policy.jar}:\
+    ${file.reference.saaj-impl.jar}:\
+    ${file.reference.stax-ex.jar}:\
+    ${file.reference.stax2-api.jar}:\
+    ${file.reference.streambuffer.jar}:\
+    ${file.reference.woodstox-core-asl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,8 +90,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
