--- a/extensions/rmi/nbproject/project.properties
+++ b/extensions/rmi/nbproject/project.properties
@@ -1,59 +1,54 @@
-#Tue Apr 16 16:06:27 CEST 2019
-excludes=
-javac.deprecation=false
-build.test.results.dir=${build.dir}/test/results
+#Thu Apr 25 15:41:21 CEST 2019
 run.classpath=${javac.classpath}\:${build.classes.dir}
-javadoc.nonavbar=false
-javac.test.modulepath=${javac.modulepath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.target=1.6
-javadoc.noindex=false
-javac.processormodulepath=
-javadoc.additionalparam=
-includes=**
-build.classes.dir=${build.dir}/classes
-source.encoding=UTF-8
-javadoc.author=false
-test.src.dir=test
-reference.jolie.jar=${project.jolie}/dist/jolie.jar
-build.dir=build
-build.test.classes.dir=${build.dir}/test/classes
-run.modulepath=${javac.modulepath}
-platform.active=default_platform
-javac.compilerargs=
-dist.jar=${dist.dir}/rmi.jar
-javadoc.use=true
-build.sysclasspath=ignore
-debug.test.classpath=${run.test.classpath}
-dist.dir=dist
-build.classes.excludes=**/*.java,**/*.form
-javadoc.encoding=${source.encoding}
-javadoc.splitindex=true
-javac.source=1.6
-javac.modulepath=
-junit.selected.version=4
-debug.classpath=${run.classpath}
-run.jvmargs=
-run.test.modulepath=${javac.test.modulepath}
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-build.generated.dir=${build.dir}/generated
-jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
-javadoc.private=false
-debug.test.modulepath=${run.test.modulepath}
-meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
+excludes=
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
-src.dir=src
+test.src.dir=test
+run.modulepath=${javac.modulepath}
+javac.compilerargs=
+build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
-javac.classpath=${reference.jolie.jar}
-project.jolie=../../jolie
-build.generated.sources.dir=${build.dir}/generated-sources
-javadoc.version=false
-javadoc.windowtitle=
+javadoc.noindex=false
+javadoc.private=false
+javadoc.author=false
+junit.selected.version=3
+source.encoding=UTF-8
+javac.source=1.6
+includes=**
+javadoc.use=true
+javadoc.nonavbar=false
+jar.compress=false
 javadoc.notree=false
+javac.deprecation=false
+javadoc.additionalparam=
+javadoc.splitindex=true
+build.generated.sources.dir=${build.dir}/generated-sources
+javac.processormodulepath=
+run.jvmargs=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+javadoc.encoding=${source.encoding}
+javac.classpath=${reference.jolie.jar}
+run.test.modulepath=${javac.test.modulepath}
+build.classes.excludes=**/*.java,**/*.form
+dist.jar=${dist.dir}/rmi.jar
+build.classes.dir=${build.dir}/classes
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
+dist.dir=dist
+build.dir=build
+build.generated.dir=${build.dir}/generated
+javadoc.version=false
+javac.test.modulepath=${javac.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.target=1.6
+platform.active=default_platform
+manifest.file=manifest.mf
+meta.inf.dir=${src.dir}/META-INF
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.modulepath=
+src.dir=src
+project.jolie=../../jolie
+debug.classpath=${run.classpath}
