--- a/extensions/auto/pom.xml
+++ b/extensions/auto/pom.xml
@@ -90,6 +90,11 @@
 			<version>${jolie.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>jolie-js</artifactId>
+			<version>${jolie.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.ini4j</groupId>
 			<artifactId>ini4j</artifactId>
 			<version>0.5.4</version>
