--- a/extensions/http/pom.xml
+++ b/extensions/http/pom.xml
@@ -17,8 +17,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<name>http
-	</name>
+	<name>http</name>
 	<description>HTTP protocol for Jolie.</description>
 	<build>
 		<plugins>
