--- a/extensions/http/pom.xml
+++ b/extensions/http/pom.xml
@@ -28,7 +28,7 @@
 				<configuration>	
 					<archive>
 						<manifestEntries>
-							<Class-Path>lib/jolie.jar lib/libjolie.jar lib/gwt-servlet.jar lib/jolie-gwt.jar lib/jolie-xml.jar lib/jolie-js.jar</Class-Path>
+							<Class-Path>lib/jolie.jar lib/libjolie.jar lib/jolie-xml.jar lib/jolie-js.jar</Class-Path>
 							<X-JOLIE-ProtocolExtension>http:jolie.net.HttpProtocolFactory</X-JOLIE-ProtocolExtension>
 						</manifestEntries>
 					</archive>
@@ -39,26 +39,6 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.1</version>
 				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>com.google.gwt</groupId>
-									<artifactId>gwt-user</artifactId>
-									<version>2.8.2</version>
-									<type>jar</type>
-									<destFileName>gwt-user.jar</destFileName>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
-          
-						</configuration>
-					</execution>
 					<execution>
 						<id>copy-installed</id>
 						<phase>install</phase>
@@ -76,7 +56,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
-          
 						</configuration>
 					</execution>
 				</executions>
@@ -96,20 +75,8 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>jolie-gwt</artifactId>
-			<version>${jolie.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie-xml</artifactId>
 			<version>${jolie.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-user</artifactId>
-			<version>2.8.2</version>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
-  
 </project>
