--- a/tools/joliec/pom.xml
+++ b/tools/joliec/pom.xml
@@ -18,9 +18,8 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<name>joliec</name>
-	<description>Tool cript Jolie source code</description>
+	<description>The Jolie compiler</description>
 	<build>
-		<finalName>${project.artifactId}.jar</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
