--- a/extensions/soaps/pom.xml
+++ b/extensions/soaps/pom.xml
@@ -22,6 +22,18 @@
 	<build>
 		<plugins>
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>	
+                    <archive>
+                        <manifestEntries>
+                            <X-JOLIE-ProtocolExtension>soaps:jolie.net.SoapsProtocolFactory</X-JOLIE-ProtocolExtension>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.1</version>
