--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,6 @@
 		<module>tools/jolie2surface</module>
 		<module>tools/jolie2wsdl</module>
 		<module>tools/joliec</module>
-		<module>tools/joliedoc</module>
 		<module>javaServices/coreJavaServices</module>
 		<module>javaServices/monitorJavaServices</module>
 		<module>launchers</module>
@@ -130,6 +129,25 @@
 									<directory>${basedir}/${jolie.installation.directory}/tools/wsdl2jolie</directory>
 									<includes>
 										<include>wsdl2jolie.ol</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-joliedoc</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${jolie.installation.directory}/tools</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/${jolie.installation.directory}/tools/joliedoc</directory>
+									<includes>
+										<include>joliedoc.ol</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
