--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,6 +73,15 @@
 			"projectName": "jolie",
 			"cwd": "${workspaceFolder}/test",
 			"args": ["-l", "./lib/\\'*\\':${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/\\'*\\':${workspaceFolder}/dist/jolie/extensions/\\'*\\'", "-i", "${workspaceFolder}/include", "test.ol", ".\\'*\\'jap.\\'*\\'"]
+		},
+		{
+			"type": "java",
+			"name": "Tests - HTTP GET",
+			"request": "launch",
+			"mainClass": "jolie.Jolie",
+			"projectName": "jolie",
+			"cwd": "${workspaceFolder}/test",
+			"args": ["-l", "./lib/\\'*\\':${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/\\'*\\':${workspaceFolder}/dist/jolie/extensions/\\'*\\'", "-i", "${workspaceFolder}/include", "test.ol", ".\\'*\\'http_get.\\'*\\'"]
 		}
 	]
 }
