--- a/.github/workflows/docker-multiplatform.yml
+++ b/.github/workflows/docker-multiplatform.yml
@@ -39,7 +39,7 @@ jobs:
           context: .
           file: docker/Dockerfile.multiplatform
           #platforms: linux/amd64,linux/arm64
-          platforms: linux/arm64
+          platforms: linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
