--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        java-version: 11
         distribution: 'adopt'
         server-id: ossrh
         server-username: MAVEN_USERNAME
