--- a/docker/Dockerfile.multiplatform
+++ b/docker/Dockerfile.multiplatform
@@ -1,4 +1,4 @@
-FROM openjdk:8-alpine as JolieBuild
+FROM adoptopenjdk/openjdk11:alpine as JolieBuild
 
 # Download and install Jolie. We need it for running the release tools.
 RUN apk add --update git maven
@@ -19,7 +19,7 @@ RUN apk add zip
 RUN jolie release.ol ../jolie-git
 
 # Start from scratch, copy the installer, install, remove the installer.
-FROM openjdk:8-alpine
+FROM adoptopenjdk/openjdk11:alpine
 RUN apk add --update zip
 WORKDIR /
 COPY --from=JolieBuild /release_tools/release/jolie_installer.jar .
