--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -38,10 +38,18 @@ WORKDIR /jolie-git/release-tools
 RUN jolie release.ol ..
 
 # Start from scratch, copy the installer, install, remove the installer.
-FROM eclipse-temurin:latest
+FROM maven:3-eclipse-temurin-17
 WORKDIR /
 COPY --from=JolieBuild /jolie-git/release-tools/release/jolie-installer.jar .
 RUN apt-get update && apt-get install -y unzip \
     && java -jar jolie-installer.jar -jh /usr/lib/jolie -jl /usr/bin \
     && rm jolie-installer.jar && rm -rf /tmp/*
 ENV JOLIE_HOME /usr/lib/jolie
+
+# Setup a sudoer user account for development
+RUN apt-get install -y sudo \
+    && useradd -m jolie -s /bin/bash \
+	&& echo 'jolie ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers.d/jolie \
+	&& chmod 0440 /etc/sudoers.d/jolie
+
+USER jolie
