--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,3 +45,4 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
+          config-file: ./.github/codeql/codeql-config.yml
