--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Build with Maven
         run: mvn install --file pom.xml
         timeout-minutes: 20
+      - name: Build JavaDoc
+        run: mvn javadoc:javadoc --file pom.xml
+        timeout-minutes: 20
       - name: Build the Jolie installer
         working-directory: ./release-tools/installer
         run: mvn install --file pom.xml
