--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,10 +48,10 @@ jobs:
 
     - name: Install gpg secret key
       run: |
-        # Import key
         cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
-        # Verify key
-        gpg --list-secret-keys --keyid-format LONG
+        
+    - name: Verify gpg key
+      run: gpg --list-secret-keys --keyid-format LONG
 
     - name: Build prerequisites
       run: mvn -f jolie-git/pom.xml -DskipTests install -pl build-tools
