--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
     - name: Checkout Jolie
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         path: jolie-git
 
@@ -42,11 +42,6 @@ jobs:
         java-version: 11
         distribution: 'temurin'
         cache: 'maven'
-        server-id: ossrh
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-        gpg-private-key: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
-        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
     - name: Build prerequisites
       run: mvn -f jolie-git/pom.xml -DskipTests install -pl build-tools
@@ -80,6 +75,18 @@ jobs:
       with:
         files: jolie-*.jar
     
+    - name: Set up Maven Central
+      uses: actions/setup-java@v3
+      with:
+        java-version: 11
+        distribution: 'temurin'
+        cache: 'maven'
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
+
     - name: Publish on Maven Central
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
