--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,12 +73,12 @@ jobs:
         && mv release/jolie-installer.jar ../../jolie-${JOLIE_VERSION:1}.jar \
         && cd ../..
     
-    - name: Release Jolie on GitHub
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      with:
-        files: jolie-*.jar
+    # - name: Release Jolie on GitHub
+    #   uses: softprops/action-gh-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+    #   with:
+    #     files: jolie-*.jar
 
     - name: Publish on Maven Central
       env:
