--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,6 @@ jobs:
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
         gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-    
-    - name: print
-      run: |
-        cat /home/runner/.m2/settings.xml
-        gpg --list-secret-keys
 
     - name: Build prerequisites
       run: mvn -f jolie-git/pom.xml -DskipTests install -pl build-tools
@@ -78,13 +73,6 @@ jobs:
         && mv release/jolie-installer.jar ../../jolie-${JOLIE_VERSION:1}.jar \
         && cd ../..
     
-    # - name: Release Jolie on GitHub
-    #   uses: softprops/action-gh-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-    #   with:
-    #     files: jolie-*.jar
-
     - name: Publish on Maven Central
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
@@ -96,3 +84,10 @@ jobs:
         deploy \
         -pl libjolie,jolie,lib/jolie-js,jolie-cli \
         -P ossrh
+
+    - name: Release Jolie on GitHub
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      with:
+        files: jolie-*.jar
